big refactoring again